# openfx-text-base

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  3rdparty-licenses.md  CMakeLists.txt  README.en.md  README.md
.github/: FUNDING.yml
cmake/: Info.plist.in  mac-settings.cmake  toolchain.cmake
debugger/udp-viewer/: pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  viewer.py
docker/: Dockerfile  entrypoint.sh
docs/: interaction-intent.md  third-party-libraries.md  usecase-base-classes.md
scripts/: build.sh  docker-build.sh  install-mac.command  install-win.bat  rebuild_docker_image.sh  setup-editor.sh
src/: Version.h  main.cc  main.h
src/debugger/: LogManager.cc  LogManager.h
src/font/: AppleFontPlatform.cc  AppleFontPlatform.h  FontManager.cc  FontManager.h  FontPlatform.cc  FontPlatform.h  LinuxFontPlatform.cc  LinuxFontPlatform.h  Win32FontPlatform.cc  Win32FontPlatform.h
src/interaction/: CommandUseCase.h  CurrentState.h  HandlingRole.h  Intent.cc  Intent.h  Interact.cc  Interact.h  InteractionInput.cc  InteractionInput.h  InteractionUseCase.cc  InteractionUseCase.h  KeyUseCase.cc  KeyUseCase.h  PassiveUseCase.h  SelectionItem.h  SnapshotState.h  StateFactory.cc  StateFactory.h  UseCaseRouter.cc  UseCaseRouter.h
src/interaction/usecases/: CursorHighlightUseCase.cc  CursorHighlightUseCase.h  DragFeedbackUseCase.cc  DragFeedbackUseCase.h  DragUseCase.cc  DragUseCase.h  GrabableAreaDisplayUseCase.cc  GrabableAreaDisplayUseCase.h  MoveUseCase.cc  MoveUseCase.h  ResetPositionAndSizeCommand.cc  ResetPositionAndSizeCommand.h  ResetPositionAndSizeKeyUseCase.cc  ResetPositionAndSizeKeyUseCase.h
src/overlay/: OfxDrawSuiteRenderer.cc  OfxDrawSuiteRenderer.h  OpenGLRenderer.cc  OpenGLRenderer.h  OverlayRenderer.cc  OverlayRenderer.h
src/params/: ParamIds.h  ParameterManager.cc  ParameterManager.h
src/params/core/: BooleanParameter.cc  BooleanParameter.h  ChoiceParameter.cc  ChoiceParameter.h  Double2DParameter.cc  Double2DParameter.h  DoubleParameter.cc  DoubleParameter.h  GroupParameter.cc  GroupParameter.h  IntParameter.cc  IntParameter.h  ParameterBase.h  ParameterDecl.h  ParameterGroup.cc  ParameterGroup.h  ParameterIndexerBase.cc  ParameterIndexerBase.h  ParameterNode.cc  ParameterNode.h  ParameterTreeBuilder.cc  ParameterTreeBuilder.h  PushButtonParameter.cc  PushButtonParameter.h  RGBAParameter.cc  RGBAParameter.h  RootParameterGroup.cc  RootParameterGroup.h  StringParameter.cc  StringParameter.h  Types.h  VisibilityRule.h
src/processors/: Common.h  Generic.h  MetalCompositor.h  MetalCompositor.mm  OpenCLCompositor.cc  OpenCLCompositor.h
src/render/: CoordTransform.h  Renderer.cc  Renderer.h
